force-app/main/UtilityComponents/aiFormBuilder/objects/Form_Generation_Log__c/Form_Generation_Log__c.object-meta.xml
<CustomObject>
    <label>Form Generation Log</label>
    <pluralLabel>Form Generation Logs</pluralLabel>
    <nameField>
        <label>Log Name</label>
        <type>AutoNumber</type>
        <displayFormat>FGL-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Audit trail for AI extraction and generation jobs</description>
</CustomObject>