force-app/main/UtilityComponents/aiFormBuilder/objects/Form_Generation_Log__c/fields/AI_Service_Used__c.field-meta.xml
<CustomField>
    <fullName>AI_Service_Used__c</fullName>
    <description>AI provider/model used</description>
    <label>AI Service Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>