force-app/main/UtilityComponents/aiFormBuilder/objects/Form_Generation_Log__c/fields/Error_Details__c.field-meta.xml
<CustomField>
    <fullName>Error_Details__c</fullName>
    <description>Error details if any</description>
    <label>Error Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>