force-app/main/UtilityComponents/aiFormBuilder/objects/Form_Generation_Log__c/fields/Generation_Date__c.field-meta.xml
<CustomField>
    <fullName>Generation_Date__c</fullName>
    <description>Time of operation</description>
    <label>Generation Date</label>
    <type>DateTime</type>
</CustomField>