force-app/main/UtilityComponents/aiFormBuilder/objects/Form_Generation_Log__c/fields/Processing_Time__c.field-meta.xml
<CustomField>
    <fullName>Processing_Time__c</fullName>
    <description>Elapsed time in seconds</description>
    <label>Processing Time (s)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>