force-app/main/UtilityComponents/aiFormBuilder/objects/Form_Generation_Log__c/fields/Success__c.field-meta.xml
<CustomField>
    <fullName>Success__c</fullName>
    <description>Whether operation succeeded</description>
    <label>Success</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>