force-app/main/UtilityComponents/aiFormBuilder/objects/Form_Generation_Log__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <description>Related Form Template</description>
    <label>Template</label>
    <referenceTo>Form_Template__c</referenceTo>
    <relationshipLabel>Generation Logs</relationshipLabel>
    <relationshipName>Generation_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>