force-app/main/UtilityComponents/aiFormBuilder/objects/Form_Generation_Log__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <description>User who initiated the operation</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Logs</relationshipLabel>
    <relationshipName>User_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>